--- a/android-engineer.html
+++ b/android-engineer.html
@@ -46,7 +46,11 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://www.profocustechnology.com/jobs/android-engineer-beaverton-or/'>Android Engineer | Beaverton, OR - ProFocus Technology - Open IT Positions and Technology Job Postings</a></h5> 
+<h5><a href='https://boards.greenhouse.io/mailchimp/jobs/1936176'>Job Application for Android Engineer at Mailchimp</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.profocustechnology.com/jobs/android-engineer-beaverton-or/'>Android Engineer | Beaverton, OR - ProFocus Technology - Open IT Positions and Technology Job Postings</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR Beaverton, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -109,11 +113,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ngyllMwL'>Benefitfocus Careers - Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ngyllMwL'>Benefitfocus Careers - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/fueled/jobs/1916475'>Job Application for Senior Android Engineer at Fueled</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fueled/jobs/1916475'>Job Application for Senior Android Engineer at Fueled</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -133,11 +137,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697995659-sr-android-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Android Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999697995659-sr-android-engineer-for-global-sportswear-brand'>Aroghia Group Sr. Android Engineer for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
+<h5><a href='https://boards.greenhouse.io/anchorfree/jobs/1930260'>Job Application for Senior Android Engineer (Enterprise Security) at Pango Inc. </a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -145,7 +149,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
+<h5><a href='https://apply.workable.com/permutive/j/F5DC7F5054/'>Android Software Engineer - Permutive</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -173,7 +177,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://starling-bank.workable.com/j/CADDB54F06?viewed=true'>Android Engineer (Southampton) - Starling Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://starling-bank.workable.com/j/CADDB54F06?viewed=true'>Android Engineer (Southampton) - Starling Bank</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... We are a leading digital bank on a mission to disrupt the banking industry. We've 
 built an app with smart money management tools to help our customers live a?...</p>
@@ -218,7 +222,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
@@ -235,7 +239,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin  ?  Berlin</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/QuandooGmbH1/743999697537732-senior-android-engineer-b2b-m-f-x-'>Quandoo GmbH Senior Android Engineer, B2B (m/f/x) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/QuandooGmbH1/743999697537732-senior-android-engineer-b2b-m-f-x-'>Quandoo GmbH Senior Android Engineer, B2B (m/f/x) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany  Australia Italy</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -263,7 +267,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://jobs.github.com/positions/8ce73d82-fc32-4074-9187-12f042bb002a'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.github.com/positions/8ce73d82-fc32-4074-9187-12f042bb002a'>
       Sr. Android Engineer ?
       GitHub Jobs
     </a></h5> 
@@ -322,7 +326,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Square/743999697091040-android-engineer'>Square Android Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
@@ -342,15 +346,15 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rocketinsights/jobs/4396637002'>Job Application for Android Engineers (All levels)  at Rocket Insights</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rocketinsights/jobs/4396637002'>Job Application for Android Engineers (All levels)  at Rocket Insights</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/newrelic/job/o2JgbfwW'>New Relic Careers - Senior Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e581879'>Stellenangebot: Android Application Engineer (m/w/x) (Bonn) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
@@ -456,13 +460,9 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-03</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999696014649-android-engineer'>Adevinta Android Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-02</p>
 <hr/>
 
 
