--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,22 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://rbauction.referrals.selectminds.com/jobs/front-end-developer-2854'>Front-End Developer - Ritchie Bros. Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1937416'>Job Application for Software Engineer- Front End at Fuze</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/thinkingphones/jobs/1939551'>Job Application for Senior Software Engineer- Front End at Fuze</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=owvG9fwA&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n638oMwW'>Freedom Financial Network Careers - Senior Front End Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://homeday.join.com/jobs/471067-frontend-engineer-m-f-x'>Job @ Homeday (Berlin): Frontend Engineer (m/f/x) | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-30</p>
@@ -92,11 +108,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -124,7 +140,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://funda.recruitee.com/o/frontend-developer-1'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://funda.recruitee.com/o/frontend-developer-1'>
       Front-end Developer - Funda
     </a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
@@ -142,7 +158,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ansarada/f3c19e12-80ef-45da-ac4d-bf8cba68fe55'>Ansarada - Frontend Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/ansarada/f3c19e12-80ef-45da-ac4d-bf8cba68fe55'>Ansarada - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Ho Chi Minh Sydney</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -156,7 +172,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://e-bot7.join.com/jobs/470792-senior-frontend-engineer-elm-m-f-d'>Job @ e-bot7 (Munich): Senior Frontend Engineer El... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://e-bot7.join.com/jobs/470792-senior-frontend-engineer-elm-m-f-d'>Job @ e-bot7 (Munich): Senior Frontend Engineer El... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -226,7 +242,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
+<h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -306,7 +322,7 @@
 <p><span class="badge badge-light">Edinburgh, United Kingdom</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
+<h5><a href='https://searchmetrics.recruitee.com/l/en/o/senior-software-engineer-mfx-focus-frontend'>
       Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
@@ -367,7 +383,7 @@ acceleration platform that creates high performance sales teams with?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698424753-front-end-developer'>Bey Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -402,7 +418,7 @@ Enterprise Software team in building highly interactive, intuitive and responsiv
 architecture and functionality decisions. Whether you prefer providing mentorship 
 to?...</p>
 <hr/>
-<h5><a href='https://opensignal-limited.workable.com/jobs/1155891/candidates/new'>Frontend Engineer - Opensignal</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opensignal-limited.workable.com/jobs/1155891/candidates/new'>Frontend Engineer - Opensignal</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... Who are Opensignal?Opensignal, a mobile analytics company, is the global 
 standard for measuring real-world mobile network experience. Using billions of?...</p>
@@ -413,7 +429,7 @@ standard for measuring real-world mobile network experience. Using billions of?.
 freedom to thrive anywhere. We are building a banking service that allows you to
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vgs/c67a87f2-4f38-4292-af00-f4aeb29c2ab0'>Very Good Security - Frontend Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -451,22 +467,6 @@ freedom to thrive anywhere. We are building a banking service that allows you to
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Deezer/743999698356459-front-end-developer-content-team-internship-'>Deezer Front End Developer - Content Team (Internship) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://shijigroup.join.com/jobs/461187-front-end-developer'>Job @ Shiji (Faro): Front End Developer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://experian.referrals.selectminds.com/jobs/senior-front-end-developer-14066'>Senior Front End Developer - Experian Careers</a></h5> 
-<p><span class="badge badge-light">Scottsdale, Arizona United States  North America</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/pendo/jobs/4498102002'>Job Application for Sr. Front End Engineer at Pendo</a></h5> 
-<p><span class="badge badge-light">Raleigh, NC</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/polarr/03597d84-a719-4a61-aef4-82b435d8df3d'>Polarr - Senior Frontend Engineer</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 
